--- a/bin/src/main/resources/application.properties
+++ b/bin/src/main/resources/application.properties
@@ -1,22 +1,15 @@
-server.port=7783
+server.port=8884
 
 #spring.jpa.properties.hibernate.default_schema=main
- 
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto: none
 spring.jpa.generate-ddl: true
 spring.jpa.show-sql: true
 spring.jpa.properties.hibernate.format_sql=true
 
 #spring.h2.console.enabled=true
- 
 spring.h2.console.settings.trace=true
 spring.h2.console.settings.web-allow-others=true
-#spring.datasource.url=jdbc:h2:file:~/data/demo
-spring.datasource.url=jdbc:h2:tcp://localhost/~/test
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 
 #api
@@ -25,8 +18,8 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 api.LGSTSQ.uri = /lgstsq
 api.LGSTSQ.host=http://localhost:9090
 
-api.LGUCVS01.host=http://localhost:6683
-api.LGUCVS01.uri =/lgucvs01
+api.LGUCVS01.host=http://localhost:8993
+api.LGUCVS01.uri =/lgacvs01
 
 
 
